lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:19: error: type mismatch;
 found   : Double
 required: Int
		if (estSolPlat(i)) {a=i;b=getSol()(i).y}
                                                      ^Lander:23: error: type mismatch;
 found   : (Int, Int)
 required: lessons.lander.universe.Point
	return new Segment((a,b),(a+50,b))
                           ^Lander:23: error: type mismatch;
 found   : (Int, Int)
 required: lessons.lander.universe.Point
	return new Segment((a,b),(a+50,b))
                                 ^